--- a/ListaExJava/src/.gitignore
+++ b/ListaExJava/src/.gitignore
@@ -10,3 +10,21 @@
 /Exercicio10.class
 /MainListaEx.class
 /Exercicio11.class
+/Exercicio12.class
+/Exercicio13.class
+/Exercicio15.class
+/Exercicio16.class
+/Exercicio14.class
+/Exercicio17.class
+/Exercicio18.class
+/Exercicio21.class
+/Exercicio19.class
+/Exercicio23.class
+/Exercicio22.class
+/Exercicio24.class
+/Exercicio25.class
+/Exercicio27.class
+/Exercicio26.class
+/Exercicio28.class
+/Exercicio29.class
+/Exercicio30.class
